# XMX-Emulator

./: CMakeLists.txt  README.md  SignExtn.c  bus.c  decoder.c  emulator.h  execute.c  fetch.c  loader.c  main.c  memory_dump.c  memory_regfile_psw.c  others.c  psw.c  register_file.c  set_PC.c  set_breakpoint.c
